--- a/templates/index.html
+++ b/templates/index.html
@@ -1,54 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="static/style.css">
-</head>
-<body>
-    <div class="wrapper">
-        <header class="header">
-            <div class="container">
-                <div class="header__row">
-                    <div class="header__logo">
-                        <h1><a href="/">FORUM</a></h1>
-                    </div>
-                    <div class="header__menu">
-                        <nav class="header__nav">
-                            <li>
-                                <a href="/post">all posts</a>
-                            </li>
-                            <li>
-                                <a href="#">liked posts</a>
-                            </li>
-                            <li>
-                                <a href="#">unliked posts</a>
-                            </li>
-                        </nav>
-                    </div>
-                    <div class="header__auth">
-                        <a href="/sign-in" class="button signin">Войти</a>
-                        <a href="/sign-up" class="button signup">Регистрация</a>
-                    </div>
-                </div>
+{{ template "base" .}}
+{{ define "main" }}
+    <div class="main__row" id="posts">
+        {{ range .Posts }}
+            <div class="post__author" style="color: gray">
+                {{ .Author }}
             </div>
-        </header>
-        <main class="main">
-            <div class="container">
-                <div class="main__row">
-
-                </div>
+            <div class="post__title">
+                <h1 style="border-bottom: 1px solid gray">
+                    {{ .Title }}
+                </h1>
             </div>
-        </main>
-        <footer>
-            <div class="container">
-                <div class="footer__row">
-
-                </div>
+            <div class="post__content">
+                <p>
+                    {{ .Content }}
+                </p>
             </div>
-        </footer>
+            <div class="post__page" style="text-align: right">
+                <li>
+                    <a href="#" style="color: #e06149">Читать статью</a>
+                </li>
+            </div>
+            <br>
+            <br>
+        {{ end }}
     </div>
-</body>
-</html>
+{{ end }}
+
+
