--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,67 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="static/style.css">
-</head>
-<body>
-    <div class="wrapper">
-        <header class="header">
-            <div class="container">
-                <div class="header__row">
-                    <div class="header__logo">
-                        <h1><a href="/">FORUM</a></h1>
-                    </div>
-                    <div class="header__menu">
-                        <nav class="header__nav">
-                            <li>
-                                <a href="/post">all posts</a>
-                            </li>
-                            <li>
-                                <a href="#">liked posts</a>
-                            </li>
-                            <li>
-                                <a href="#">unliked posts</a>
-                            </li>
-                        </nav>
-                    </div>
-                    <div class="header__auth">
-                        <a href="#" class="button signin">Войти</a>
-                        <a href="#" class="button signup">Регистрация</a>
-                    </div>
-                </div>
-            </div>
-        </header>
-        <main class="main">
-            <div class="container">
-                <div class="main__row">
-                    <form action="" class="main__form" method="POST">
-                    <div class="main__heading">
-                        <h2>Зарегистрироваться</h2>
-                    </div>
-                    <div class="main__content">
-                        <p>Заполните необходимые поля для регистрации</p>
-                    </div>
-                    
-                        <input type="text" placeholder="Email" class="email" name="username">
-                        <input type="text" placeholder="Ваш пароль" class="password" name="password">
-                        <input type="submit" value="Зарегистрироваться" class="enter">
-                        <p>{{ . }}</p>
-                    </form>
-                    
-                </div>
-            </div>
-        </main>
-        <footer>
-            <div class="container">
-                <div class="footer__row">
-
-                </div>
-            </div>
-        </footer>
+{{template "base" .}}
+               
+{{ define "main" }}
+<div class="main__row">
+    <form action="" class="main__form" method="POST">
+    <div class="main__heading">
+        <h2>Зарегистрироваться</h2>
     </div>
-</body>
-</html>
+    <div class="main__content">
+        <p>Заполните необходимые поля для регистрации</p>
+    </div>
+        <input type="text" placeholder="Email" class="email" name="username">
+        <input type="text" placeholder="Ваш пароль" class="password" name="password">
+        <input type="submit" value="Зарегистрироваться" class="enter">
+    </form>
+</div>
+{{ end }} 
