new fitches: validation, button like, dislike

--- a/templates/create_post.html
+++ b/templates/create_post.html
@@ -9,9 +9,11 @@
     <div class="main__content">
         <p>Чтобы создать пост нажмите кнопку создать пост</p>
     </div>
-        <input type="text" placeholder="Название статьи" class="email" name="title">
+        <input type="text" placeholder="Название статьи" class="login" name="title">
         <input type="text" placeholder="Текст" class="password" name="content">
         <input type="submit" value="Создать пост" class="enter">
+       
     </form>
+    
 </div>
 {{ end }}
