--- a/templates/layout/layout.html
+++ b/templates/layout/layout.html
@@ -69,22 +69,6 @@
                             <p>IT профессиям</p>
                         </div>
                         <div class="footer__info">
-                            <!-- <div class="footer__first">
-                                <h4>Информация</h4>
-                                <p>Сертификаты</p>
-                                <p>Реклама</p>
-                            </div>
-                            <div class="footer__second">
-                                <h4></h4>
-                                <p>О нас</p>
-                                <p>Соглашение</p>
-                                <p>Карта сайта</p>
-                            </div>
-                            <div class="footer_third">
-                                <h4>Информация</h4>
-                                <p>Сертификаты</p>
-                                <p>Реклама</p>
-                            </div> -->
                             <table>
                                 <tr>
                                   <th>Информация</th>
@@ -108,10 +92,6 @@
                                   </tr>
                               </table> 
                         </div>
-                       
-                         
-                       
-
                         <div class="footer__email">
                             <input type="text" placeholder="E-mail">
                             <input type="submit" value="Подписаться">
@@ -129,9 +109,9 @@
             </div>
         </footer>
     </div>
-    
+    <script src="https://code.jquery.com/jquery-3.6.0.slim.js" integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY=" crossorigin="anonymous"></script>
     <script src="/static/main.js"></script>
-    <script src="https://kit.fontawesome.com/56942480bb.js" crossorigin="anonymous"></script>
+   
 </body>
 </html>
 {{end}}
