--- a/templates/signin.html
+++ b/templates/signin.html
@@ -10,8 +10,8 @@
         <p>Чтобы войти на сайт используйте ваш email и пароль, которые были указаны при регистрации (подписке) на сайт</p>
     </div>
     
-        <input type="text" placeholder="Email" class="email" name="username">
-        <input type="text" placeholder="Ваш пароль" class="password" name="password">
+        <input type="text" placeholder="Ваш логин" class="login" name="username">
+        <input type="password" placeholder="Ваш пароль" class="password" name="password">
         <input type="submit" value="Войти" class="enter">
         <div class="main__forget">
             <p class="forget">Забыли пароль?</p>
