--- a/static/style.css
+++ b/static/style.css
@@ -69,6 +69,8 @@ h5 {
     margin: 0 auto;
 }
 
+
+
 h2 {
     margin: 0;
 }
@@ -76,7 +78,7 @@ h2 {
     text-align: center;
 }
 
-.password, .email {
+.password, .login{
     border: 1px solid #cdd0d1;
     padding: 20px;
     width: 460px;
@@ -84,6 +86,13 @@ h2 {
     border-radius: 10px;
 }
 
+.password_check {
+    border: 1px solid #cdd0d1;
+    padding: 20px;
+    width: 460px;
+    margin-bottom: 20px;
+    border-radius: 10px;
+}
 .enter {
     background: #e06149;
     color: white;
@@ -94,6 +103,9 @@ h2 {
 }
 
 
+input {
+    outline: none;
+}
 
 .posts {
     width: 800px;
@@ -137,3 +149,18 @@ td {
     justify-content: space-between;
     color: #e06149;
 }
+
+
+
+#like {
+    background-color: black;
+    -webkit-mask-image: url(images/like.svg);
+    mask-image: url(images/like.svg);
+}
+
+#dislike {
+    background-color: black;
+    -webkit-mask-image: url(images/dislike.svg);
+    mask-image: url(images/dislike.svg);
+}
+
