--- a/templates/create_post.html
+++ b/templates/create_post.html
@@ -9,10 +9,10 @@
     <div class="main__content">
         <p>Чтобы создать пост нажмите кнопку создать пост</p>
     </div>
+        <input type="text" name="category">
         <input type="text" placeholder="Название статьи" class="login" name="title">
         <input type="text" placeholder="Текст" class="password" name="content">
         <input type="submit" value="Создать пост" class="enter">
-       
     </form>
     
 </div>
