Added liked and disliked pages with; updated counting

--- a/templates/layout/layout.html
+++ b/templates/layout/layout.html
@@ -27,10 +27,10 @@
                            
                             {{ if .IsAuth }}
                             <li>
-                                <a href="/like">Лайкнутые посты</a>
+                                <a href="/liked-posts">Лайкнутые посты</a>
                             </li>
                             <li>
-                                <a href="/dislike">Дизлайкнутые посты</a>
+                                <a href="/disliked-posts">Дизлайкнутые посты</a>
                             </li>
                             <li>
                                 <a href="/create-post">Создать пост</a>
